tests/invalid/syntax_err_too_few_for_clauses.c
int main() {
    for (int i = 2; i < 3)
        3;
    return 0;
}
// ERROR: Line 2, Error 2003